<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_assis"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.ristone.businessasso.mvp.ui.activities.AddAssisActivity">
      <include layout="@layout/layout_main_header"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@mipmap/list_view_divider" />
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
        style="@style/font3_text"
        android:text="@string/fil_name"/>
        <EditText
            android:id="@+id/name_add_assis"
            style="@style/font_text"
            android:maxLines="1"
            android:maxLength="8"
            android:hint="@string/assis_name_hint"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/font3_text"
            android:text="@string/fil_phone"/>
        <EditText
            android:id="@+id/phone_add_assis"
            style="@style/font_text"
            android:maxLines="1"
            android:maxLength="11"
            android:inputType="number"
            android:hint="@string/assis_phone_hint"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/font3_text"
            android:text="@string/fil_pass"/>
        <EditText
            android:id="@+id/pass_add_assis"
            style="@style/font_text"
            android:maxLines="1"
            android:maxLength="20"
            android:inputType="textPassword"
            android:hint="@string/assis_pass_hint"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/font3_text"
            android:text="@string/firm_pass"/>
        <EditText
            android:id="@+id/firm_add_assis"
            style="@style/font_text"
            android:maxLines="1"
            android:maxLength="20"
            android:inputType="textPassword"
            android:hint="@string/assis_affirm_hint"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/font3_text"
            android:gravity="center"
            android:text="选择性别 ："/>
        <RadioGroup
            android:orientation="horizontal"
            android:id="@+id/sex_add_assis"
            android:gravity="center_vertical"
            style="@style/font_text">
            <RadioButton
                android:id="@+id/apply_man"
                android:layout_marginLeft="45dp"
                android:text="男"
                android:button="@drawable/apply_select"
                android:paddingLeft="15dp"
                android:gravity="center"
                android:textColor="@color/color_333333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/apply_woman"
                android:layout_marginLeft="30dp"
                android:text="女"
                android:button="@drawable/apply_select"
                android:paddingLeft="15dp"
                android:gravity="center"
                android:textColor="@color/color_333333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/font3_text"
            android:text="单位名称 ："/>
        <TextView
            android:id="@+id/company_add_assis"
            style="@style/font_text"
            android:maxLines="1"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/font3_text"
            android:text="单位职务 ："/>
        <!--<TextView-->
            <!--android:layout_marginRight="40dp"-->
            <!--android:drawableRight="@drawable/apply_xiabiao"-->
            <!--android:clickable="true"-->
            <!--android:id="@+id/duty_add_assis"-->
            <!--style="@style/font_text"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_width="0dp"-->
            <!--android:gravity="center_vertical"-->
            <!--android:maxLines="1"-->
            <!--android:hint="请选择职务"/>-->
        <TextView
            android:layout_marginRight="40dp"
            android:clickable="true"
            android:drawableRight="@mipmap/icon_credit"
            android:id="@+id/duty_add_assis"
            style="@style/font_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:hint="请输入职务"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/font3_text"
            android:text="选择民族 ："/>
        <TextView
            android:layout_marginRight="40dp"
            android:drawableRight="@drawable/apply_xiabiao"
            android:clickable="true"
            android:id="@+id/nation_add_assis"
            style="@style/font_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:hint="请选择民族"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:id="@+id/btn_add_assis"
            android:layout_margin="20dp"
            android:gravity="center"
            android:background="@drawable/btn_rectange"
            android:textColor="#6BC8E1"
            android:text="@string/save"
            style="@style/font_text"/>
    </LinearLayout>
</LinearLayout>
